add config for prod

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -14,6 +14,7 @@ logging.level.=error
 # ==============================================================
 server.port=8080
 
+spring.application.name=dev
 
 # ==============================================================
 # = server jwt
